--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
 
   gtag('config', 'AW-17428414843');
 </script>
+<!-- Event snippet for Clic saliente conversion page -->
+<script>
+  gtag('event', 'conversion', {
+      'send_to': 'AW-17428414843/WO_vCJGb_oUbEPuCwvZA',
+      'value': 1.0,
+      'currency': 'COP'
+  });
+</script>
+
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body { font-family: 'Poppins', sans-serif; line-height: 1.6; background: #f8f9fa; }
@@ -123,4 +132,5 @@
 
 </body>
 </html>
+
 
