--- a/index.html
+++ b/index.html
@@ -5,22 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tiquetes Baratos | Promociones de Vuelos</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17428414843"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17449205418">
+</script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'AW-17428414843');
-</script>
-<!-- Event snippet for Clic saliente conversion page -->
-<script>
-  gtag('event', 'conversion', {
-      'send_to': 'AW-17428414843/WO_vCJGb_oUbEPuCwvZA',
-      'value': 1.0,
-      'currency': 'COP'
-  });
+  gtag('config', 'AW-17449205418');
 </script>
 
   <style>
@@ -132,5 +126,6 @@
 
 </body>
 </html>
+
 
 
